--- a/machine_learning/templates/category/index.html
+++ b/machine_learning/templates/category/index.html
@@ -32,6 +32,13 @@
       <td>
         <button
           type="button"
+          class="btn btn-outline-dark"
+          onclick="location.href='/category/detail/{{category.code}}';"
+        >
+          <i class="fa-solid fa-eye"></i>
+        </button>
+        <button
+          type="button"
           class="btn btn-outline-warning"
           onclick="location.href='/category/edit/{{category.code}}';"
         >
