--- a/machine_learning/templates/category/detail.html
+++ b/machine_learning/templates/category/detail.html
@@ -46,6 +46,7 @@
     <tr>
       <th>Kode Produk</th>
       <th>Nama Produk</th>
+      <th>Stock</th>
       <th style="width: 10%">Action</th>
     </tr>
   </thead>
@@ -54,6 +55,7 @@
     <tr>
       <td>{{product.code}}</td>
       <td>{{product.name}}</td>
+      <td>{{product.quantity}}</td>
       <td>
         <button
           type="button"
