--- a/machine_learning/templates/category/edit.html
+++ b/machine_learning/templates/category/edit.html
@@ -15,7 +15,7 @@
       >Back to Category List</span
     >
     <span style="display: inline-block; font-size: 19px; font-weight: bold"
-      >Add a new category</span
+      >Edit category</span
     >
   </span>
 </a>
