--- a/machine_learning/templates/order/index.html
+++ b/machine_learning/templates/order/index.html
@@ -19,13 +19,13 @@
 >
   <thead class="table-light">
     <tr>
-      <th>Order ID</th>
+      <th style="width: 8%">Order ID</th>
       <th>Product</th>
       <th>Quantity</th>
       <th>Total Price</th>
       <th>Warehouse</th>
       <th>Customer</th>
-      <th style="width: 10%">Action</th>
+      <th style="width: 7%">Action</th>
     </tr>
   </thead>
   <tbody>
