--- a/machine_learning/templates/category/index.html
+++ b/machine_learning/templates/category/index.html
@@ -19,8 +19,8 @@
 >
   <thead class="table-light">
     <tr>
-      <th>Kode Produk</th>
-      <th>Nama Produk</th>
+      <th style="width: 18%">Code</th>
+      <th>Category Name</th>
       <th style="width: 10%">Action</th>
     </tr>
   </thead>
