--- a/machine_learning/templates/customer/index.html
+++ b/machine_learning/templates/customer/index.html
@@ -23,7 +23,7 @@
       <th>Email</th>
       <th>Phone Number</th>
       <th>Address</th>
-      <th>Action</th>
+      <th style="width: 7%">Action</th>
     </tr>
   </thead>
   <tbody>
