update: minor update ui

--- a/machine_learning/templates/index.html
+++ b/machine_learning/templates/index.html
@@ -133,7 +133,10 @@
       <div class="card-header" style="background-color: #b333e9">
         <div class="d-flex justify-content-between align-items-center">
           <div>
-            <i class="fa-solid fa-percent fa-2xl" style="color: #ffffff"></i>
+            <i
+              class="fa-solid fa-cart-shopping fa-2xl"
+              style="color: #ffffff"
+            ></i>
           </div>
           <div>
             <p
