--- a/machine_learning/templates/navbar.html
+++ b/machine_learning/templates/navbar.html
@@ -16,7 +16,7 @@
 >
   <a
     class="navbar-brand fs-4 fw-bold text-center"
-    style="margin-left-4px"
+    style="margin-left: 4px"
     href="/"
     >Machine Learning</a
   >
@@ -28,10 +28,7 @@
       href="/"
     >
       <p class="m-0">
-        <i
-          class="fa-solid fa-house fa-xs"
-          style="outline: 1px solid black; margin-right: 5px"
-        ></i>
+        <i class="fa-solid fa-house fa-xs" style="margin-right: 5px"></i>
         Dashboard
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
@@ -42,11 +39,7 @@
       href="/product/"
     >
       <p class="m-0">
-        <i
-          class="fa-solid fa-box fa-xs"
-          style="outline: 1px solid black; margin-right: 13px"
-        ></i
-        >Product
+        <i class="fa-solid fa-box fa-xs" style="margin-right: 13px"></i>Product
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
@@ -56,10 +49,7 @@
       href="/category/"
     >
       <p class="m-0">
-        <i
-          class="fa-solid fa-list fa-xs"
-          style="outline: 1px solid black; margin-right: 5px"
-        ></i>
+        <i class="fa-solid fa-list fa-xs" style="margin-right: 5px"></i>
         Category
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
@@ -71,10 +61,7 @@
       href="/"
     >
       <p class="m-0">
-        <i
-          class="fa-solid fa-percent fa-xs"
-          style="outline: 1px solid black; margin-right: 13px"
-        ></i
+        <i class="fa-solid fa-percent fa-xs" style="margin-right: 13px"></i
         >Sales
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
@@ -86,10 +73,7 @@
       href="/customer/"
     >
       <p class="m-0">
-        <i
-          class="fa-solid fa-percent fa-xs"
-          style="outline: 1px solid black; margin-right: 13px"
-        ></i
+        <i class="fa-solid fa-user fa-xs" style="margin-right: 13px"></i
         >Customers
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
@@ -102,7 +86,7 @@
       <p class="m-0">
         <i
           class="fa-solid fa-percent fa-xs"
-          style="outline: 1px solid black; margin-right: 13px"
+          style=" margin-right: 13px"
         ></i
         >Warehouses
       </p>
@@ -115,8 +99,8 @@
     >
       <p class="m-0">
         <i
-          class="fa-solid fa-percent fa-xs"
-          style="outline: 1px solid black; margin-right: 13px"
+          class="fa-solid fa-cart-shopping fa-xs"
+          style="margin-right: 13px"
         ></i
         >Orders
       </p>
@@ -147,7 +131,6 @@
                 color: black;
                 font-size: 16px;
                 font-weight: 500;
-                {% comment %} margin-right: 5px; {% endcomment %}
               "
             >
               <i class="fa-solid fa-user" style="margin-right: 20px"></i>
