--- a/machine_learning/templates/login.html
+++ b/machine_learning/templates/login.html
@@ -8,7 +8,7 @@
             <h3>Login</h3>
             <hr>
             {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
+                <div class="alert alert-danger">
                     {{ message }}
                 </div>
             {% endfor %}
