--- a/machine_learning/templates/order/index.html
+++ b/machine_learning/templates/order/index.html
@@ -9,7 +9,7 @@
 >
 <br />
 {% for message in messages %}
-<div class="alert alert-{{ message.tags }}">{{ message }}</div>
+<div class="alert alert-{{ message.tags }}" style="margin-top: 20px;">{{ message }}</div>
 {% endfor %}
 <br />
 <table
@@ -19,24 +19,38 @@
 >
   <thead class="table-light">
     <tr>
-      <th style="width: 8%">Order ID</th>
-      <th>Product</th>
+      <th>Order ID</th>
+      <th>Customer Name</th>
+      <th>Customer Type</th>
+      <th>Gender</th>
+      <th>Product Name</th>
+      <th>Product Category</th>
+      <th>Price</th>
       <th>Quantity</th>
       <th>Total Price</th>
-      <th>Warehouse</th>
-      <th>Customer</th>
-      <th style="width: 7%">Action</th>
+      <th>Date</th>
+      <th>Time</th>
+      <th>Payment</th>
+      <th>Discount</th>
+      <th>Action</th>
     </tr>
-  </thead>
-  <tbody>
+</thead>
+<tbody>
     {% for order in data %}
     <tr>
       <td>{{order.id}}</td>
-      <td>{{order.product}}</td>
+      <td>{{order.customer.name}}</td>
+      <td>{{order.customer.customer_type}}</td>
+      <td>{{order.customer.gender}}</td>
+      <td>{{order.product.name}}</td>
+      <td>{{order.product.category}}</td>
+      <td>{{order.product.price}}</td>
       <td>{{order.quantity}}</td>
       <td>{{order.total_price}}</td>
-      <td>{{order.warehouse}}</td>
-      <td>{{order.customer}}</td>
+      <td>{{order.date|date:"SHORT_DATE_FORMAT"}}</td>
+      <td>{{order.time|time:"H:i"}}</td>
+      <td>{{order.payment_type}}</td>
+      <td>{{order.discount}}</td>
       <td>
         <button
           type="button"
