--- a/machine_learning/templates/navbar.html
+++ b/machine_learning/templates/navbar.html
@@ -74,7 +74,7 @@
     >
       <p class="m-0">
         <i class="fa-solid fa-user fa-xs" style="margin-right: 13px"></i
-        >Customers
+        >Customer
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
@@ -102,7 +102,7 @@
           class="fa-solid fa-cart-shopping fa-xs"
           style="margin-right: 13px"
         ></i
-        >Orders
+        >Order
       </p>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
