--- a/machine_learning/templates/product/index.html
+++ b/machine_learning/templates/product/index.html
@@ -19,11 +19,11 @@
 >
   <thead class="table-light">
     <tr>
-      <th>Kode Produk</th>
-      <th>Nama Produk</th>
+      <th>Product Code</th>
+      <th>Product Name</th>
       <th>Category</th>
-      <th>Harga Produk</th>
-      <th>Stok Produk</th>
+      <th>Unit Price</th>
+      <th>Stock</th>
       <th style="width: 7%">Action</th>
     </tr>
   </thead>
@@ -32,8 +32,8 @@
     <tr>
       <td>{{product.code}}</td>
       <td>{{product.name}}</td>
-      <td>{{product.category}}</td>
-      <td>{{product.price}}</td>
+      <td>{{product.product_category}}</td>
+      <td>{{product.unit_price}}</td>
       <td>{{product.quantity}}</td>
       <td>
         <button
